--- a/webinterface.html
+++ b/webinterface.html
@@ -20,21 +20,60 @@
     <div id="tester" style="width:1000px;height:450px;"></div>
 
     <script>
-        var data = [{
-                x: ['2013-10-04 22:23:00', '2013-11-04 22:23:00', '2013-12-04 22:23:00'],
-                y: [1, 3, 6],
-                type: 'scatter'
-            }];
-        console.log(data)
-        Plotly.newPlot('tester', data);
+        var layout = {
+            title: 'Sensor Data',
+            xaxis: {
+                autorange: true,
+                range: ['2024-02-12', '2024-02-13'],
+                type: 'date',
+                title : "Time (UTC)"
+            },
+            yaxis: {
+                title: "Temperature (deg C)",
+                autorange: true,
+                range: [86.8700008333, 138.870004167],    
+                type: 'linear'
+            },
+            yaxis2: {
+                title: 'Pressure (hPa)',
+                titlefont: {color: 'rgb(148, 103, 189)'},
+                tickfont: {color: 'rgb(148, 103, 189)'},
+                overlaying: 'y',
+                side: 'right'
+            }
+        };
+
+        var testPlotElemenet = document.getElementById('tester');
+
 
         updateData = function () {
-            $.getJSON("http://127.0.0.1:8000/data/day", function(new_data) {
-                data = new_data.data;
-                console.log(data);
-                Plotly.update('tester', data);
-            })
+            $.getJSON("http://127.0.0.1:8000/data/day", function(json) {
+                var new_data = json.data[0];
+                var update = [{
+                        x: new_data.x, //.slice(-600),
+                        y: new_data.y, //.slice(-600),
+                        type: new_data.type,
+                        name: "Temperature"
+                    },{
+                        x: new_data.x,//.slice(-600),
+                        y: new_data.z,//.slice(-600),
+                        yaxis: "y2",
+                        type: new_data.type,
+                        name: "Pressure"
+                    }];
+
+                data[0] = update[0];
+                data[1] = update[1];
+
+                if (testPlotElemenet.data) {
+                    Plotly.redraw(testPlotElemenet);
+                } else {
+                    Plotly.newPlot(testPlotElemenet, data, layout);
+                }
+            });
         }
+
+        updateData()
         window.setInterval(
             updateData, 5000
         )
